tests/snapshots/cli_help__prompt_list_help.snap
---
source: tests/cli_help.rs
expression: stdout
---
List prompts

Usage: mf prompt list [OPTIONS]

Options:
      --no-headers       Suppress the table header row
      --root <PATH>      Mind Repo root directory
      --config <PATH>    Config file path
      --no-trunc         Disable column truncation
  -v, --verbose...       Verbose output
  -q, --quiet            Silence non-error output
  -o, --output <FORMAT>  Output format [default: text] [possible values: text, json]
      --json             Shorthand for --output json
      --no-color         Disable colored output
  -p, --project <NAME>   Project name for project-scoped operations
  -h, --help             Print help
  -V, --version          Print version
