tests/snapshots/cli_help__prompt_show_help.snap
---
source: tests/cli_help.rs
expression: stdout
---
Show prompt details

Usage: mf prompt show [OPTIONS] <SELECTOR>

Arguments:
  <SELECTOR>  Prompt identity (path), e.g. prompts/my-post.md — as emitted by `mf prompt list`

Options:
      --root <PATH>      Mind Repo root directory
      --config <PATH>    Config file path
  -v, --verbose...       Verbose output
  -q, --quiet            Silence non-error output
  -o, --output <FORMAT>  Output format [default: text] [possible values: text, json]
      --json             Shorthand for --output json
      --no-color         Disable colored output
  -p, --project <NAME>   Project name for project-scoped operations
  -h, --help             Print help
  -V, --version          Print version
