tests/snapshots/cli_help__publish_help.snap
---
source: tests/cli_help.rs
expression: stdout
---
Publish articles to configured targets

Usage: mf publish [OPTIONS] [COMMAND]

Commands:
  run     Publish an article to a target
  update  Update publish record metadata
  target  List and manage publish targets

Options:
      --root <PATH>             Mind Repo root directory
      --config <PATH>           Config file path
  -v, --verbose...              Verbose output
  -q, --quiet                   Silence non-error output
  -o, --output <FORMAT>         Output format [default: text] [possible values: text, json]
      --json                    Shorthand for --output json
      --no-color                Disable colored output
  -p, --project <NAME_OR_PATH>  Project name or path (cwd-relative, repo-relative, or absolute)
  -h, --help                    Print help
  -V, --version                 Print version
