tests/snapshots/cli_help__publish_run_help.snap
---
source: tests/cli_help.rs
expression: stdout
---
Publish an article to a target

Usage: mf publish run [OPTIONS] <ARTICLE>

Arguments:
  <ARTICLE>  Article name (kebab-case, no extension, no path separators)

Options:
      --root <PATH>             Mind Repo root directory
      --target <TARGET>         
      --config <PATH>           Config file path
      --strip-front-matter      Remove the complete front-matter block from the published payload
      --keep-front-matter       Keep front matter even when publish.strip_front_matter is enabled
  -v, --verbose...              Verbose output
  -n, --dry-run                 Preview changes without writing
  -q, --quiet                   Silence non-error output
  -f, --force                   Proceed despite safety checks: overwrite an existing target, or
                                remove an entity referenced by others
  -o, --output <FORMAT>         Output format [default: text] [possible values: text, json]
      --json                    Shorthand for --output json
      --no-color                Disable colored output
  -p, --project <NAME_OR_PATH>  Project name or path (cwd-relative, repo-relative, or absolute)
  -h, --help                    Print help
  -V, --version                 Print version
