tests/snapshots/cli_help__publisher_list_help.snap
---
source: tests/cli_help.rs
assertion_line: 196
expression: stdout
---
List publishers and diagnostics

Usage: mf publisher list [OPTIONS]

Options:
      --root <PATH>
          Mind Repo root directory
      --config <PATH>
          Config file path
  -v, --verbose...
          Verbose output
  -q, --quiet
          Silence non-error output
      --format <FORMAT>
          Output format [default: text] [possible values: text, json]
      --json
          Shorthand for --format json
      --no-color
          Disable colored output
      --install-completion <INSTALL_COMPLETION>
          Install shell completion script [possible values: bash, zsh, fish, powershell, elvish]
      --show-completion <SHOW_COMPLETION>
          Show shell completion script [possible values: bash, zsh, fish, powershell, elvish]
  -h, --help
          Print help
  -V, --version
          Print version
