tests/snapshots/cli_help__render_help.snap
---
source: tests/cli_help.rs
expression: stdout
---
Generate render prompts (emits prompts only, no output files)

Usage: mf render [OPTIONS] [ARTICLE] [COMMAND]

Commands:
  template  Manage render templates

Arguments:
  [ARTICLE]
          Article slug, project path (docs/my-article), or path to the article

Options:
      --root <PATH>
          Mind Repo root directory

      --template <TEMPLATE>
          Render template name

      --config <PATH>
          Config file path

      --html-form <HTML_FORM>
          HTML output form (document or fragment)

          Possible values:
          - document: Full HTML document with `<html>`, `<head>`, and `<body>`
          - fragment: Embeddable HTML fragment without outer document structure

  -v, --verbose...
          Verbose output

  -q, --quiet
          Silence non-error output

  -o, --output <FORMAT>
          Output format
          
          [default: text]
          [possible values: text, json]

      --json
          Shorthand for --output json

      --no-color
          Disable colored output

  -p, --project <NAME_OR_PATH>
          Project name or path (cwd-relative, repo-relative, or absolute)

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
