tests/snapshots/cli_help__source_add_help.snap
---
source: tests/cli_help.rs
expression: stdout
---
Create a source

Usage: mf source new [OPTIONS] <INPUT>

Arguments:
  <INPUT>  

Options:
      --name <NAME>                Override the source name derived from the input
      --root <PATH>                Mind Repo root directory
      --config <PATH>              Config file path
      --file-kind <FILE_KIND>      File kind (mf primary). Use --source-kind for mind channel type
                                   [possible values: auto, pdf, file, rss, web]
      --source-kind <SOURCE_KIND>  Source channel type (mind primary) [possible values: yuque,
                                   meeting, misc]
  -v, --verbose...                 Verbose output
      --link                       Create a symlink instead of copying a local file
  -q, --quiet                      Silence non-error output
  -o, --output <FORMAT>            Output format [default: text] [possible values: text, json]
      --register-only              Register a file already inside the project's sources directory
                                   without copying it
      --json                       Shorthand for --output json
      --no-index                   Register only, without indexing the source into RAG (Lance
                                   backend). By default a new source is chunked and embedded so it
                                   is searchable at once
      --article <ARTICLE>          Originating article that introduced this source (project-relative
                                   path). Captured as authoritative import provenance (spec 071).
                                   Must stay within the project; an escaping path is a usage error
      --no-color                   Disable colored output
  -f, --force                      Proceed despite safety checks: overwrite an existing target, or
                                   remove an entity referenced by others
  -p, --project <NAME_OR_PATH>     Project name or path (cwd-relative, repo-relative, or absolute)
  -n, --dry-run                    Preview changes without writing
  -h, --help                       Print help
  -V, --version                    Print version
