tests/snapshots/cli_help__source_advanced_clear_help.snap
---
source: tests/cli_help.rs
expression: stdout
---
Clear derived content (documents, chunks, enrichments)

Usage: mf source advanced clear [OPTIONS] [SOURCE]

Arguments:
  [SOURCE]  

Options:
  -p, --project <PROJECT>  
      --root <PATH>        Mind Repo root directory
      --all                
      --config <PATH>      Config file path
      --dry-run            Preview changes without writing
  -v, --verbose...         Verbose output
  -q, --quiet              Silence non-error output
  -y, --yes                Skip interactive confirmation prompt
  -o, --output <FORMAT>    Output format [default: text] [possible values: text, json]
      --json               Shorthand for --output json
      --no-color           Disable colored output
  -h, --help               Print help
  -V, --version            Print version
